<resources>
    <string name="app_name" translatable="false">Wires</string>
    <string name="app_subtitle">Social community app for IT-people</string>

    <string name="share">Share</string>
    <string name="refresh">Refresh</string>
    <string name="confirm">Confirm</string>

    <!-- DATES -->
    <string name="date_time_relative_less_minute">less than a minute ago</string>
    <string name="date_time_relative_today">today at %s</string>
    <string name="date_time_relative_yesterday">yesterday at %s</string>
    <string name="date_relative_today">today</string>
    <string name="date_relative_yesterday">yesterday</string>
    <string name="template_date_text_month_time">MMMM dd \'at\' hh:mm a</string>
    <string name="template_full_date_time">MMMM dd, yyyy \'at\' hh:mm a</string>
    <string name="template_time_standard">hh:mm</string>
    <string name="template_date_day_month">MMMM dd</string>
    <string name="template_date_standard">MMMM dd yyyy</string>

    <plurals name="date_time_relative_minute_ago">
        <item quantity="one">%d minute ago</item>
        <item quantity="other">%d minutes ago</item>
    </plurals>
    <plurals name="date_time_relative_hour_ago">
        <item quantity="one">%d hour ago</item>
        <item quantity="other">%d hours ago</item>
    </plurals>

    <!-- AUTH -->
    <string name="login_label">Login</string>
    <string name="login_button_text">Login</string>
    <string name="register_label">Register</string>
    <string name="register_button_text">Register</string>
    <string name="login_title">Login to account</string>
    <string name="register_title">Register account</string>
    <string name="email_hint" translatable="false">E-mail</string>
    <string name="password_hint">Password</string>
    <string name="confirm_password_hint">Confirm password</string>
    <string name="username_hint">Username</string>

    <!-- ONBOARDING -->
    <string name="onboarding_title">Welcome!</string>
    <string name="onboarding_user_setup_description">Enter your personal data to make it easier for other users to recognize you</string>
    <string name="onboarding_continue">Continue</string>
    <string name="onboarding_interests_setup_description">Specify your interests to receive relevant posts for you</string>
    <string name="onboarding_confirm">Confirm</string>

    <!-- FEED -->
    <string name="feed_title">Hello, %s</string>
    <string name="feed_first_tab_text">For you</string>
    <string name="feed_empty_text">There are no posts in this topic</string>

    <!-- POST -->
    <string name="post_title">Post comments</string>
    <string name="post_comment_input_hint">Enter a comment</string>
    <string name="post_menu_edit">Edit post</string>
    <string name="post_menu_delete">Delete post</string>

    <!-- ADD POST -->
    <string name="create_post_title">Create a new post</string>
    <string name="create_post_title_edit">Edit post</string>
    <string name="create_post_hint">What\'s new?</string>
    <string name="create_post_add_image_text">Add image</string>
    <string name="create_post_remove_image_text">Remove image</string>
    <string name="create_post_select_topic">Select a topic</string>
    <string name="create_post_topic">Topic: %s</string>

    <!-- CHANNELS -->
    <string name="channels_title">Channels</string>
    <string name="channels_empty_text">Channels list is empty.\nCreate channel and start messaging!</string>

    <!-- CREATE CHANNEL -->
    <string name="create_channel_group_title">Create new group channel</string>
    <string name="create_channel_users">Users in channel</string>
    <string name="create_channel_name_hint">Channel name</string>
    <string name="create_channel_edit_users">Edit</string>
    <string name="create_channel_add_users">Add</string>
    <string name="create_channel_personal">Create personal channel</string>
    <string name="create_channel_group">Create group channel</string>
    <string name="create_channel_edit_mode_title">Edit group channel</string>

    <!-- PICK USERS -->
    <string name="pick_users_title">Add users</string>
    <string name="pick_users_users_added">Added users</string>
    <string name="pick_users_users_found">Found users</string>
    <string name="pick_users_search_hint">Search users</string>
    <string name="pick_users_empty_added">There are no users in channel</string>
    <string name="pick_users_nothing_found">No users found</string>

    <!-- CHAT -->
    <string name="chat_message_input_hint">Enter a message</string>
    <string name="chat_initial_message_text">Channel is empty. Send message first!</string>
    <string name="chat_message_empty_text">Channel is empty.\nSend message first!</string>

    <!-- PROFILE -->
    <string name="profile_interests_text">Interests: %s&#160;</string>
    <string name="profile_username_text" translatable="false">\@%s</string>
    <string name="profile_user_posts_empty_text">This user have no posts</string>

    <!-- EDIT PROFILE -->
    <string name="edit_profile_title">Edit personal data</string>
    <string name="edit_profile_first_name_hint">First name</string>
    <string name="edit_profile_last_name_hint">Last name</string>
    <string name="edit_profile_interests_title">Interests</string>

    <!-- CHANGE PASSWORD -->
    <string name="change_password_old_hint">Old password</string>
    <string name="change_password_new_hint">New password</string>
    <string name="change_password_confirm_new_hint">Confirm new password</string>
    <string name="change_password_success">Password successfully changed!</string>

    <!-- SETTINGS -->
    <string name="settings_title">Settings</string>
    <string name="settings_change_password">Change password</string>
    <string name="settings_change_locale">Change localization</string>
    <string name="settings_locale_english" translatable="false">English</string>
    <string name="settings_locale_russian" translatable="false">Русский</string>
    <string name="settings_report_warning">Don\'t remove the information below!\n</string>
    <string name="settings_report_version">ОS: Android (%d)\n</string>
    <string name="settings_report_username">Username: %s\n</string>
    <string name="settings_report_device">Device: %s\n</string>
    <string name="settings_report_email">kostjag15@gmail.com</string>
    <string name="settings_report_description">\nBug description:\n</string>
    <string name="settings_report_title">Bug report</string>
    <string name="settings_report_copied">Email was copied to clipboard</string>
    <string name="settings_logout">Logout</string>
    <string name="settings_logout_message">Do you really want to log out from your account?</string>
    <string name="settings_logout_positive_text">Logout</string>
    <string name="settings_logout_negative_text">Cancel</string>

    <!-- ERRORS -->
    <string name="error_empty_field">Field cannot be empty!</string>
    <string name="error_incorrect_email">Incorrect e-mail!</string>
    <string name="error_length_password">Password must contain from 8 to 24 symbols!</string>
    <string name="error_weak_password">Password must contain uppercase and lowercase letters and numbers!</string>
    <string name="error_different_passwords">Passwords don\'t match!</string>
    <string name="error_incorrect_username">Username may contain only lower letters, numbers and underscores!</string>
    <string name="error_length_username">Username must contain from 3 to 24 symbols!</string>
    <string name="error_length_name">Name must contain from 2 to 16 symbols!</string>
    <string name="error_incorrect_name">Name may contain only letters!</string>
    <string name="error_no_network_title">Connection error!</string>
    <string name="error_no_network_description">Please, check your connection and refresh the page</string>
    <string name="error_something_wrong_title">Something went wrong!</string>
    <string name="error_something_wrong_description">Try to refresh the page</string>
    <string name="error_empty_message">Message cannot be empty!</string>
    <string name="error_short_search_query">Search query must contain at least 3 letters!</string>
    <string name="error_length_channel_name">Channel name must contain from 3 to 28 symbols!</string>

    <!-- BOTTOM NAVIGATION -->
    <string name="menu_label_feed">Feed</string>
    <string name="menu_label_messages">Messages</string>
    <string name="menu_label_profile">Profile</string>

    <!-- LOG MESSAGES -->
    <string name="open_socket_message" translatable="false">Socket channel %d opened</string>

    <!-- DIALOG -->
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="dialog_progress_text">Please, wait…</string>
    <string name="dialog_post_delete_title">Delete post</string>
    <string name="dialog_post_delete_message">Are you sure you want to delete this post?</string>

    <!-- IMAGE PICKER -->
    <string name="title_choose_image_provider">Choose source:</string>
    <string name="action_cancel">Cancel</string>
    <string name="title_gallery">Gallery</string>
    <string name="title_camera">Camera</string>
    <string name="message_image_pick_error">Failed to get image</string>

    <!-- NOTIFICATIONS -->
    <string name="notifications_messages_channel_name">Messages</string>
</resources>