<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/linearLayoutRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:paddingHorizontal="@dimen/auth_horizontal_padding"
            android:paddingBottom="@dimen/padding_20">

            <ImageView
                android:id="@+id/viewRegisterHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:src="@drawable/ic_logo" />

            <TextView
                android:id="@+id/textViewRegisterTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center_horizontal"
                android:text="@string/register_title"
                android:textAppearance="@style/FontStyle.Headline5.Bold" />

           <com.wires.app.presentation.views.ValidationTextInput
               android:id="@+id/inputRegisterUsername"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginTop="20dp"
               app:fieldHint="@string/username_hint"
               app:fieldInputType="text"
               app:fieldImeOptions="actionNext"
               app:lengthErrorText="@string/error_length_username"
               app:minTextLength="3"
               app:maxTextLength="24"
               app:validationPattern="^[a-z0-9_]*$"
               app:patternErrorText="@string/error_incorrect_username" />

            <com.wires.app.presentation.views.ValidationTextInput
                android:id="@+id/inputRegisterEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:fieldHint="@string/email_hint"
                app:fieldInputType="email"
                app:fieldImeOptions="actionNext"
                app:patternErrorText="@string/error_incorrect_email" />

            <com.wires.app.presentation.views.ValidationTextInput
                android:id="@+id/inputRegisterPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:fieldHint="@string/password_hint"
                app:fieldInputType="textPassword"
                app:fieldImeOptions="actionNext"
                app:minTextLength="8"
                app:maxTextLength="24"
                app:lengthErrorText="@string/error_length_password"
                app:validationPattern="^(?=.*[0-9])(?=.*[a-z])(?=.*[A-Z]).*$"
                app:patternErrorText="@string/error_weak_password"
                app:additionalValidationErrorText="@string/error_different_passwords" />

            <com.wires.app.presentation.views.ValidationTextInput
                android:id="@+id/inputRegisterConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:fieldHint="@string/confirm_password_hint"
                app:fieldInputType="textPassword"
                app:fieldImeOptions="actionDone"
                app:additionalValidationErrorText="@string/error_different_passwords" />

            <com.wires.app.presentation.views.StatefulMaterialButton
                android:id="@+id/buttonRegister"
                style="@style/ButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/register_label"
                android:textAppearance="@style/FontStyle.ButtonRegular.Bold" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>