<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?colorSurface">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbarChangePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:navigationIcon="@drawable/ic_arrow_back"
            app:navigationIconTint="?colorToolbarIcons"
            app:title="@string/settings_change_password">

            <ImageButton
                android:id="@+id/buttonChangePasswordDone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="8dp"
                android:background="@drawable/bg_circle_ripple"
                android:src="@drawable/ic_done"
                android:padding="8dp"
                app:tint="?colorToolbarIcons" />

        </com.google.android.material.appbar.MaterialToolbar>

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/progressIndicatorChangePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-3dp"
            android:layout_marginBottom="-7dp"
            android:indeterminate="true"
            android:progressTint="?colorPrimary"
            android:visibility="gone" />
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:id="@+id/linearLayoutChangePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/padding_24"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <com.wires.app.presentation.views.ValidationTextInput
            android:id="@+id/inputOldPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            app:fieldInputType="textPassword"
            app:fieldImeOptions="actionNext"
            app:fieldHint="@string/change_password_old_hint" />
        <com.wires.app.presentation.views.ValidationTextInput
            android:id="@+id/inputNewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:fieldHint="@string/change_password_new_hint"
            app:fieldInputType="textPassword"
            app:fieldImeOptions="actionNext"
            app:minTextLength="8"
            app:maxTextLength="24"
            app:lengthErrorText="@string/error_length_password"
            app:validationPattern="^(?=.*[0-9])(?=.*[a-z])(?=.*[A-Z]).*$"
            app:patternErrorText="@string/error_weak_password"
            app:additionalValidationErrorText="@string/error_different_passwords" />
        <com.wires.app.presentation.views.ValidationTextInput
            android:id="@+id/inputNewPasswordConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:fieldInputType="textPassword"
            app:fieldImeOptions="actionDone"
            app:fieldHint="@string/change_password_confirm_new_hint"
            app:additionalValidationErrorText="@string/error_different_passwords" />
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>