<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbarPickUsers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?colorSurface"
            app:navigationIcon="@drawable/ic_arrow_back"
            app:navigationIconTint="?colorToolbarIcons"
            app:contentInsetStartWithNavigation="0dp"
            app:contentInsetEnd="8dp"
            app:title="@string/pick_users_title">

            <LinearLayout
                android:id="@+id/linearLayoutPickUsersSearch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="gone">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/editTextPickUsersSearch"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:imeOptions="actionSearch"
                    android:inputType="text"
                    android:hint="@string/pick_users_search_hint"
                    android:paddingVertical="8dp"
                    android:textAppearance="@style/FontStyle.Body" />

                <ImageButton
                    android:id="@+id/buttonPickUsersClear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|end"
                    android:background="@drawable/bg_circle_ripple"
                    android:src="@drawable/ic_close"
                    android:padding="8dp" />

            </LinearLayout>

            <ImageButton
                android:id="@+id/buttonPickUsersSearch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                android:background="@drawable/bg_circle_ripple"
                android:src="@drawable/ic_search"
                android:padding="8dp" />

        </com.google.android.material.appbar.MaterialToolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_12"
            android:layout_marginTop="12dp"
            android:text="@string/pick_users_users_added"
            android:textAppearance="@style/FontStyle.Body.Bold" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="105dp"
            android:layout_marginTop="8dp">

            <com.wires.app.presentation.views.EmptyRecyclerView
                android:id="@+id/recyclerViewAddedUsers"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                android:orientation="horizontal"
                android:paddingEnd="4dp"
                android:paddingStart="4dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_user_preview" />

            <TextView
                android:id="@+id/emptyViewAddedUsers"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/pick_users_empty_added"
                android:textAppearance="@style/FontStyle.Small"
                android:visibility="gone" />

        </FrameLayout>

        <TextView
            android:id="@+id/textViewFoundUsers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_12"
            android:layout_marginTop="12dp"
            android:text="@string/pick_users_users_found"
            android:textAppearance="@style/FontStyle.Body.Bold"
            android:visibility="gone"
            tools:visibility="visible" />

        <com.wires.app.presentation.views.StateViewFlipper
            android:id="@+id/stateViewFlipperPickUsers"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:visibility="gone"
            tools:visibility="visible" >

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.wires.app.presentation.views.EmptyRecyclerView
                    android:id="@+id/recyclerViewFoundUsers"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingHorizontal="@dimen/padding_8"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/item_user" />

                <TextView
                    android:id="@+id/emptyViewFoundUsers"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:paddingTop="100dp"
                    android:text="@string/pick_users_nothing_found"
                    android:textAppearance="@style/FontStyle.Body"
                    android:visibility="gone" />

            </FrameLayout>
        </com.wires.app.presentation.views.StateViewFlipper>
    </LinearLayout>

    <com.wires.app.presentation.views.StatefulMaterialButton
        android:id="@+id/buttonPickUsersConfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginHorizontal="@dimen/margin_8"
        android:layout_marginBottom="@dimen/margin_8"
        android:text="@string/confirm"
        android:visibility="gone"
        style="@style/ButtonStyle"
        tools:visibility="visible" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>